--- a/screw-components-frontend/src/innerComponents/CoreEditor/components/LeftSlider/minCom.module.scss
+++ b/screw-components-frontend/src/innerComponents/CoreEditor/components/LeftSlider/minCom.module.scss
@@ -3,14 +3,25 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 50%;
+    box-sizing: border-box;
+    width: 80px;
+    height: 80px;
+    padding: 12px;
+    border: 1px solid var(--border-color);
+    cursor: grab;
+    &:active {
+        cursor: grabbing;
+    }
 }
 .itemIconWrapper {
-  
+   user-select: none;
+   pointer-events: none;
 }
 .itemIcon {
-
+    width: 36px;
+    height: 36px;
+    
 }
 .itemText {
-  
+    
 }
