--- a/screw-components-frontend/src/innerComponents/CoreEditor/components/LeftSlider/minCom.module.scss
+++ b/screw-components-frontend/src/innerComponents/CoreEditor/components/LeftSlider/minCom.module.scss
@@ -10,6 +10,10 @@
     border: 1px solid var(--border-color);
     cursor: grab;
     margin-bottom: 12px;
+    margin-right: 12px;
+    &:nth-of-type(3n) {
+        margin-right: 0;
+    }
     &:active {
         cursor: grabbing;
     }
